--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,15 @@ dmypy.json
 .pyre/
 
 FG_Jeff\.ttf
+
+font_ttfs/
+
+glyph_out/
+
+glyphazzn_urls\.txt
+
+trial/
+
+generate_tfr/stats/
+
+generate_tfr/tfrs/
